--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,10 @@ gradle-app.setting
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+
+# additional git ignores
+.idea
+gradlew
+*.bat
+gradle/
