--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,7 @@ fabric.properties
 **/build/
 !src/**/build/
 
-# Ignore Gradle GUI config
+# Ignore Gradle gui config
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
